--- a/basictutorials/.vscode/settings.json
+++ b/basictutorials/.vscode/settings.json
@@ -1,3 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "python.linting.pylintPath": "${workspaceRoot}/../venv/Scripts/pylint.exe",
+    "python.venvPath": "${workspaceRoot}/../venv",
+    "python.pythonPath": "${workspaceRoot}/../venv/Scripts/python.exe"
 }
